--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "joi": "^13.2.0",
     "morgan": "^1.9.0",
     "mysql": "^2.15.0"
   }
